part2/exercise08/todo/todo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo
  name: todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo 
  template:
    metadata:
      labels:
        app: todo 
    spec:
      volumes:
        - name: todo-image
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo 
          image: mashiahoz/todo
          volumeMounts:
            - name: todo-image
              mountPath: /usr/src/app/images
